--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\conta\\Downloads\\javax.ws.rs-api-2.0.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=/Users/hampus/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\conta\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
