--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.genson-1.4.jar=/Users/hampus/Downloads/genson-1.4.jar
+file.reference.genson-1.4.jar=/Users/ramonachantaf/Desktop/genson-1.4.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=/Users/ramonachantaf/Desktop/DAP/javax.ws.rs-api-2.0.1.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=/Users/hampus/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=/Users/ramonachantaf/Library/Application Support/NetBeans/8.2/build.properties
