--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,12 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
+compile.on.save=true
+do.depend=false
+do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.genson-1.4.jar=/Users/hampus/Downloads/genson-1.4.jar
+file.reference.genson-1.4.jar=C:\\Users\\SoftyLaptop\\Documents\\genson-0.97.jar
+javac.debug=true
+javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=/Users/hampus/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\SoftyLaptop\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
