--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -31,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.genson-1.4.jar=C:\\Users\\conta\\Downloads\\genson-1.4.jar
-file.reference.javax.ws.rs-api-2.0.1.jar=/Users/hampus/Downloads/javax.ws.rs-api-2.0.1.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\SoftyLaptop\\Documents\\javax.ws.rs-api-2.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,10 +39,13 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.restlib.classpath}:\
     ${file.reference.genson-1.4.jar}:\
+    ${libs.jaxws21.classpath}:\
+    ${libs.restapi.classpath}:\
     ${file.reference.javax.ws.rs-api-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -105,6 +107,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
