--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,16 +31,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.genson-1.4.jar=C:\\Users\\conta\\Downloads\\genson-1.4.jar
-file.reference.javax.ws.rs-api-2.0.1.jar=/Users/hampus/Downloads/javax.ws.rs-api-2.0.1.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=/Users/Alexiz/Downloads/javax.ws.rs-api-2.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.javax.ws.rs-api-2.0.1.jar}:\
     ${libs.restlib.classpath}:\
-    ${file.reference.genson-1.4.jar}
+    ${file.reference.genson-1.4.jar}:\
+    ${file.reference.javax.ws.rs-api-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
