--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,9 +4,10 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.genson-1.4.jar=C:\\Users\\SoftyLaptop\\Documents\\genson-0.97.jar
+file.reference.genson-1.4.jar=/Users/ramonachantaf/Desktop/genson-1.4.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=/Users/ramonachantaf/Desktop/DAP/javax.ws.rs-api-2.0.1.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=C:\\Users\\SoftyLaptop\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/ramonachantaf/Library/Application Support/NetBeans/8.2/build.properties
