pytte pytte fix

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -19,8 +19,8 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.genson-1.4.jar=C:\\Users\\conra\\Documents\\NetBeansProjects\\testverktygFrontend\\j\u00e4klaLibs\\genson-0.97.jar
-file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\conra\\Documents\\NetBeansProjects\\testverktygFrontend\\j\u00e4klaLibs\\javax.ws.rs-api-2.0.1.jar
+file.reference.genson-1.4.jar=C:\\Users\\SoftyLaptop\\Documents\\NetBeansProjects\\testverktygFrontend\\j\u00e4klaLibs\\genson-0.97.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\SoftyLaptop\\Documents\\NetBeansProjects\\testverktygFrontend\\j\u00e4klaLibs\\javax.ws.rs-api-2.0.1.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
