--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -15,4 +15,4 @@ javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=/usr/bin/open
-user.properties.file=C:\\Users\\SoftyLaptop\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/hampus/Library/Application Support/NetBeans/8.1/build.properties
